fixed api endpoint tags for swagger
